version/0.15/_sources/api/ansys/geometry/core/_grpc/_services/v0/admin/GRPCAdminServiceV0.rst.txt






:class:`GRPCAdminServiceV0`
===========================


.. py:class:: ansys.geometry.core._grpc._services.v0.admin.GRPCAdminServiceV0(channel: grpc.Channel)

   Bases: :py:obj:`ansys.geometry.core._grpc._services.base.admin.GRPCAdminService`


   
   Admin service for gRPC communication with the Geometry server.

   This class provides methods to interact with the Geometry server's
   admin service. It is specifically designed for the v0 version of the
   Geometry API.

   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: GRPCAdminServiceV0

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_backend`
            - Get server information.
          * - :py:attr:`~get_logs`
            - Get server logs.
          * - :py:attr:`~get_service_status`
            - Get server status (i.e. healthy or not).
          * - :py:attr:`~get_tracker`
            - Get tracker information.
          * - :py:attr:`~get_tracker_changes`
            - Get tracker changes.
          * - :py:attr:`~set_automatic_tracking_state`
            - Set automatic tracking state.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~stub`
            - 
          * - :py:attr:`~commands_stub`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.v0.admin import GRPCAdminServiceV0


Attribute detail
----------------

.. py:attribute:: stub

.. py:attribute:: commands_stub



Method detail
-------------

.. py:method:: get_backend(**kwargs) -> dict

   
   Get server information.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_logs(**kwargs) -> dict

   
   Get server logs.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_service_status(**kwargs) -> dict

   
   Get server status (i.e. healthy or not).
















   ..
       !! processed by numpydoc !!

.. py:method:: get_tracker(**kwargs) -> dict

   
   Get tracker information.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_tracker_changes(**kwargs) -> dict

   
   Get tracker changes.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_automatic_tracking_state(**kwargs) -> dict

   
   Set automatic tracking state.
















   ..
       !! processed by numpydoc !!




